Made a few changes, cleaned up alignment issues.

--- a/stylesheets/base.less
+++ b/stylesheets/base.less
@@ -37,7 +37,7 @@
 
                     &:after {
                         content: '';
-                        background: rgba(255, 255, 255, .07);
+                        background: rgba(255, 255, 255, @highlight-opacity);
                         width: 4px; height: 100%;
                         position: absolute;
                         top: 0; right: -3px; bottom: 0; }
